tests/baselines/reference/exportDefaultStripsFreshness.errors.txt
tests/cases/compiler/index.ts(10,6): error TS2737: Property 'foo' is missing in type '{ foob: string; }' but present in type 'IFoo'.
tests/cases/compiler/index.ts(12,6): error TS2737: Property 'foo' is missing in type '{ foob: string; }' but present in type 'IFoo'.


==== tests/cases/compiler/items.ts (0 errors) ====
    export default {
        foob: "a"
    }
    
    export const q = {
        foob: "b"
    }
==== tests/cases/compiler/index.ts (2 errors) ====
    import B, {q} from "./items";
    
    interface IFoo {
        foo: string;
    }
    
    function nFoo(x: IFoo) {}
    
    
    nFoo(q); // for comparison
         ~
!!! error TS2737: Property 'foo' is missing in type '{ foob: string; }' but present in type 'IFoo'.
    
    nFoo(B);
         ~
!!! error TS2737: Property 'foo' is missing in type '{ foob: string; }' but present in type 'IFoo'.
    